--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
 .card{
     margin-left: 3%;
 }
+
+#contenedorjs {
+    font-size: 6em;
+    padding-top: 10px;
+    display: flex;
+    text-align: center;
+    align-content: center;
+    flex-direction: column;
+}
