--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,33 @@
 .bg{
     background-image: url(../media/fondo.jpg);
 }
+
+
+#tablaCarrito{
+    background-color: rgba(242, 255, 255, 0.778);
+}
+
+
+.tituloCarrito{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    color: rgb(0, 0, 0);
+    font-family: "Segoe IU", sans-serif;
+    font-weight: 700;
+}
+
+
+.saludo{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+}
+
+.carro{
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    color: white;
+    font-weight: 500;
+}
